[package]
name = "tf2-sku"
description = "For parsing attributes from SKU strings."
version = "0.1.0"
edition = "2021"
authors = ["Julia"]
homepage = "https://github.com/juliarose/tf2-sku"
repository = "https://github.com/juliarose/tf2-sku"
license = "MIT"
keywords = ["tf2", "steam"]
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
tf2-enum = { path = "../tf2-enum", version = "0" }

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "string_conversions"
harness = false