[package]
name = "tf2-sku"
description = "SKU parser for Team Fortress 2 items."
version = "0.7.0"
# MSRV
rust-version = "1.75.0"
edition = "2021"
authors = ["Julia"]
repository = "https://github.com/juliarose/tf2-sku"
license = "MIT"
keywords = ["tf2", "steam"]
readme = "README.md"

[dependencies]
serde = { version = "^1", features = ["derive"] }
tf2-enum = "^0.13.0"

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"

[[bench]]
name = "string_conversions"
harness = false
